test/scale/connectivity/pinger.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pinger
  namespace: connectivity-test
  labels:
    app: pinger
spec:
  replicas: 2
  selector:
    matchLabels:
      app: pinger
  template:
    metadata:
      labels:
        app: pinger
    spec:
      nodeSelector:
        connectivity-test: "true"
      containers:
      - command:
        - /agnhost
        - serve-hostname
        - --tcp
        - --http=false
        - --port
        - "80"
        image: k8s.gcr.io/e2e-test-images/agnhost:2.61
        imagePullPolicy: IfNotPresent
        name: cont-80-tcp
        ports:
        - containerPort: 80
          protocol: TCP
